Added reference to EOSJ article that mentions OFBiz, with details from Partner Homes
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6117 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -344,6 +344,7 @@
 
       <div id="inthenews">        
         <h2>OFBiz in the News</h2>
+        <p>2005-09/10 &quot;Gaining Acceptance: Real-World Experiences with Open Source Business Applications (Vol 1, Num 2, Page 40)&quot; on <a href="http://www.eosj.com/" target="_blank">Enterprise Open Source Journal</a></p>
         <p>2005-08-08 &quot;<a href="http://www.infoworld.com/article/05/08/08/32FEosscrm_1.html?s=feature" target="_blank">Open Source CRM</a>&quot; on <a href="http://www.infoworld.com/" target="_blank">InfoWorld</a></p>
         <p>2005-06-16 &quot;<a href="http://searchenterpriselinux.techtarget.com/originalContent/0,289142,sid39_gci1098875,00.html" target="_blank">SMBs no longer shut out of ERP</a>&quot; on <a href="http://searchenterpriselinux.techtarget.com/" target="_blank">SearchEnterpriseLinux.com</a></p>
         <p>2004-09-11 &quot;<a href="http://www.cio.com.au/index.php?id=318248421" target="_blank">Open For Business</a>&quot; on <a href="http://www.cio.com.au/index.php" target="_blank">CIO Australia</a></p>
