Added links to Steiner Sports site; thanks to Firas for the reminder
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6146 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -294,6 +294,7 @@
             <a href="http://www.skywardseen.com/control/main" target="_blank">**Skyward Seen</a>
             <a href="http://www.specialai.com" target="_blank">Special AI</a>
             <a href="http://www.steelgoods.com/control/main" target="_blank">Steel Goods</a>
+            <a href="http://www.steinersports.com/ssm/control/home" target="_blank">***Steiner Sports</a>
             <a href="http://www.storit.com/control/main" target="_blank">*Storit.com</a>
             <a href="http://www.techmate.co.uk/techmate/control/home" target="_blank">**Techmate</a>
             <a href="http://www.tgoblin.com/control/main" target="_blank">TGoblin.com</a>
