--- a/website/marketing.html
+++ b/website/marketing.html
@@ -303,6 +303,7 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.skywardseen.com/control/main" target="_blank"><b>Skyward Seen</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.specialai.com" target="_blank"><b>Special AI</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.steelgoods.com/control/main" target="_blank"><b>Steel Goods</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.steinersports.com/ssm/control/home" target="_blank"><b>Steiner Sports</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.storit.com/control/main" target="_blank"><b>Storit.com</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.techmate.co.uk/techmate/control/home" target="_blank"><b>Techmate</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.tgoblin.com/control/main" target="_blank"><b>TGoblin.com</b></a></div>
